Resolve errors and warnings throughout codebase.